Added copyright and license info

--- a/files/Docbook.css
+++ b/files/Docbook.css
@@ -1,3 +1,22 @@
+/*
+    Copyright © 2015 Stanley Security Solutions Limited.
+
+    This file is part of PACBook.
+
+    PACBook is free software: you can redistribute it and/or modify it under the
+    terms of the GNU Lesser General Public License as published by the Free
+    Software Foundation, either version 3 of the License, or (at your option)
+    any later version.
+
+    PACBook is distributed in the hope that it will be useful, but WITHOUT ANY
+    WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+    FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
+    more details.
+
+    You should have received a copy of the GNU Lesser General Public License
+    along with PACBook.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
 /* Cascading Style Sheet for DocBook XML */
 /* $Revision$ | $DateTime$ | $Author$ */
 
@@ -11,13 +30,13 @@
 @namespace dc      url(http://purl.org/dc/elements/1.1/);
 @namespace dcterms url(http://purl.org/dc/terms/);
 
-
 :root{
 	display: block;
 	font-family: Arial, Helvetica, sans-serif;
 	margin-left: 1cm;
 	max-width: 15cm
 }
+
 /* Divisions and Spans */
 *[revision]{
 	padding: 1px;
@@ -107,6 +126,7 @@ footnote > *{
 *[xml|space='preserve']{
 	white-space: pre-line
 }
+
 /* Title page */
 book > title,
 book > subtitle,
@@ -162,6 +182,7 @@ fax:before{
 uri:before{
 	content: 'Web: '
 }
+
 /* Counters */
 book{
 	counter-reset: chapter
@@ -196,6 +217,7 @@ procedure{
 substeps{
 	counter-reset: step
 }
+
 /* Headings */
 title, subtitle{
 	display: block;
@@ -324,6 +346,7 @@ glossentry > glossterm{
 	font-weight: bold;
 	font-size: 10pt
 }
+
 /* Paragraph styles */
 para, formalpara{
 	display: block;
@@ -415,6 +438,7 @@ screen{
 	margin-top: 1em;
 	font-family: Courier, Courier New, monospace;
 }
+
 /* Tables */
 table > title{
 	font-size: 10pt;
@@ -540,6 +564,7 @@ revision > revdescription{
 	vertical-align: text-top;
 	padding: 0.1cm
 }
+
 /* Images */
 figure > title{
 	font-size: 10pt;
@@ -587,6 +612,7 @@ imagedata{
 textobject{
 	display: block;
 }
+
 /* Inline styles */
 emphasis{
 	font-style: normal;
@@ -651,6 +677,7 @@ simplelist[type="inline"]{
 simplelist[type="inline"] > member{
 	display: inline
 }
+
 /* Generated content */
 simplelist[type="inline"] > member + member:before{
 	content: ", ";
@@ -868,6 +895,7 @@ glossary[status]:before{
 trademark:after{
 	content: '™'
 }
+
 /* Hidden Content */
 indexterm{
 	display: none
@@ -878,6 +906,7 @@ author, corpauthor{
 titleabbrev{
 	display: none
 }
+
 /* XInclude */
 xi\:include,
 xi|include{
@@ -901,6 +930,7 @@ xi|include:after{
 	font-size: 10pt;
 	content: attr(xpointer)
 }
+
 /* PAC */
 *[xl|role='conref']:before{
 	display: inline;
