--- a/files/XSL-FO.css
+++ b/files/XSL-FO.css
@@ -1,3 +1,22 @@
+/*
+    Copyright © 2015 Stanley Security Solutions Limited.
+
+    This file is part of PACBook.
+
+    PACBook is free software: you can redistribute it and/or modify it under the
+    terms of the GNU Lesser General Public License as published by the Free
+    Software Foundation, either version 3 of the License, or (at your option)
+    any later version.
+
+    PACBook is distributed in the hope that it will be useful, but WITHOUT ANY
+    WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+    FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
+    more details.
+
+    You should have received a copy of the GNU Lesser General Public License
+    along with PACBook.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
 /* Cascading Style Sheet for XSL-FO */
 /* $Revision$ | $DateTime$ | $Author$ */
 
@@ -18,6 +37,7 @@ fo|inline,
 fo|character{
 	display: inline;
 }
+
 /* Character Attributes */
 *[font-weight='bold']{
 	font-weight: bold;
@@ -28,6 +48,7 @@ fo|character{
 *[font-style="italic"]{
 	font-style: italic;
 }
+
 /* Colours */
 *[color='darkred']{
 	color: darkred;
@@ -35,6 +56,7 @@ fo|character{
 *[color='blue']{
 	color: blue;
 }
+
 /* Fonts */
 *[font-family~='sans-serif']{
 	font-family: Helvetica, Arial, sans-serif;
